Using ProcessBuilder and ArgumentProcessor to parse arguments